# Chess_Game

./: CMakeLists.txt  README.md  main.cpp
src/: Bishop.cpp  Bishop.h  BishopMovement.cpp  BishopMovement.h  Board.cpp  Board.h  CMakeLists.txt  Color.cpp  Color.h  GameDB.cpp  GameDB.h  GameEngine.cpp  GameEngine.h  Globals.cpp  Globals.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  RookMovement.cpp  RookMovement.h  UI.cpp  UI.h  main.cpp  myRectangle.h
