add_executable(${PROJECT_NAME}
        Piece.h
        Piece.cpp
        Color.cpp
        Color.h
        Position.cpp
        Position.h
        King.cpp
        King.h
        Board.cpp
        Board.h
        Pawn.cpp
        Pawn.h
        Rook.cpp
        Rook.h
        Knight.cpp
        Knight.h
        Bishop.cpp
        Bishop.h
        Queen.cpp
        Queen.h
        GameDB.cpp
        GameDB.h
        gameEngine.cpp
        gameEngine.h
        Globals.cpp
        Globals.h
        UI.h
        Window.h
        myRectangle.h
)
target_sources(${PROJECT_NAME} PRIVATE main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE vendor)
